--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dev_dependencies:
   build_runner: ^2.1.11
   freezed: ^2.0.3+1
   fluttertoast: ^8.0.9
+  flutter_gesture_password: ^0.0.1
+  flutter_secure_storage: ^5.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
