--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   # install
+  json_serializable: ^6.2.0
   flutter_riverpod: ^1.0.0
   freezed_annotation: ^2.0.3
 
