--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,6 @@ environment:
   sdk: ">=2.15.1 <3.0.0"
 
 dependencies:
-
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
@@ -19,6 +18,8 @@ dependencies:
   fluttertoast: ^8.0.9
   freezed: ^2.0.3+1
   freezed_annotation: ^2.0.3
+  import_path_converter: ^1.0.1
+  import_sorter: ^4.6.0
 
   # install
   json_serializable: ^6.2.0
@@ -26,8 +27,6 @@ dependencies:
   passcode_screen: ^2.0.1
 
 dev_dependencies:
-
-  # install
   build_runner: ^2.1.11
 
   flutter_lints: ^1.0.0
