--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,10 @@ dependencies:
   local_auth: ^2.1.0
   passcode_screen: ^2.0.1
 
+  flutter_localizations:
+    sdk: flutter  
+  intl: "^0.17.0"
+
 dev_dependencies:
   build_runner: ^2.1.11
 
@@ -36,6 +40,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
 
   assets:
     - assets/images/
