--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,24 +9,26 @@ environment:
   sdk: ">=2.15.1 <3.0.0"
 
 dependencies:
+  app_tracking_transparency: ^2.0.2+4
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.9.3
+
+  flutter_localizations:
+    sdk: flutter
   flutter_riverpod: ^1.0.0
   flutter_secure_storage: ^5.0.2
   fluttertoast: ^8.0.9
   freezed: ^2.0.3+1
   freezed_annotation: ^2.0.3
+  google_mobile_ads: ^1.3.0
+  intl: "^0.17.0"
 
   # install
   json_serializable: ^6.2.0
   local_auth: ^2.1.0
   passcode_screen: ^2.0.1
-
-  flutter_localizations:
-    sdk: flutter  
-  intl: "^0.17.0"
 
 dev_dependencies:
   build_runner: ^2.1.11
