--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,11 +24,10 @@ dependencies:
   freezed_annotation: ^2.0.3
   google_mobile_ads: ^1.3.0
   intl: "^0.17.0"
-
-  # install
   json_serializable: ^6.2.0
   local_auth: ^2.1.0
   passcode_screen: ^2.0.1
+  webview_flutter: ^3.0.4
 
 dev_dependencies:
   build_runner: ^2.1.11
