--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@
 # Flutter/Dart/Pub related
 **/doc/api/
 **/ios/Flutter/.last_build_id
-**/ios/Runner/Info.plist
+# **/ios/Runner/Info.plist
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
