--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -46,7 +46,7 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 	<key>GADApplicationIdentifier</key>
-    <string>ca-app-pub-4793779857582845~3431696473</string>
+    <string>AD ID</string>
     <key>SKAdNetworkItems</key>
 	<array>
 		<dict>
