delete bottom navigation while text editing

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   json_serializable: ^6.2.0
   local_auth: ^2.1.0
   passcode_screen: ^2.0.1
+  sizer: ^2.0.15
   webview_flutter: ^3.0.4
 
 dev_dependencies:
